security bufgix #2